[gd_scene load_steps=3 format=3 uid="uid://b3lymqkd0eqax"]

[ext_resource type="Script" uid="uid://bvkijhqs7slli" path="res://scenes/tests/battle_test.gd" id="1"]
[ext_resource type="Script" uid="uid://c6i2chu7ubghy" path="res://src/battle/auto_battler.gd" id="2"]

[node name="BattleTest" type="Node2D"]
script = ExtResource("1")

[node name="AutoBattler" type="Node" parent="."]
script = ExtResource("2")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 800.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2

[node name="BattleInfo" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 790.0
offset_bottom = 200.0

[node name="Team1Label" type="Label" parent="UI/BattleInfo"]
layout_mode = 2
text = "Team 1:"

[node name="Team1" type="VBoxContainer" parent="UI/BattleInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="UI/BattleInfo"]
layout_mode = 2

[node name="Team2Label" type="Label" parent="UI/BattleInfo"]
layout_mode = 2
text = "Team 2:"

[node name="Team2" type="VBoxContainer" parent="UI/BattleInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BattleLog" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 210.0
offset_right = 790.0
offset_bottom = 540.0
bbcode_enabled = true
scroll_following = true

[node name="StartButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 350.0
offset_top = 550.0
offset_right = 450.0
offset_bottom = 580.0
text = "Start Battle"
